<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * PROJECT LICENSE
  ~  *
  ~  * This project was submitted by Beatriz Ovejero as part of the Android Developer
  ~  * Nanodegree at Udacity.
  ~  *
  ~  * As part of Udacity Honor code, your submissions must be your own work, hence
  ~  * submitting this project as yours will cause you to break the Udacity Honor Code
  ~  * and the suspension of your account.
  ~  *
  ~  * As author of the project, I allow you to check it as a reference, but if you submit it
  ~  * as your own project, it's your own responsibility if you get expelled.
  ~  *
  ~  * Copyright (c) 2018 Beatriz Ovejero
  ~  *
  ~  * Besides the above notice, the following license applies and this license notice must be
  ~  * included in all works derived from this project.
  ~  *
  ~  * MIT License
  ~  *
  ~  * Permission is hereby granted, free of charge, to any person obtaining a copy
  ~  * of this software and associated documentation files (the "Software"), to deal
  ~  * in the Software without restriction, including without limitation the rights
  ~  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  * copies of the Software, and to permit persons to whom the Software is
  ~  * furnished to do so, subject to the following conditions:
  ~  *
  ~  * The above copyright notice and this permission notice shall be included in all
  ~  * copies or substantial portions of the Software.
  ~  *
  ~  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~  * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~  * SOFTWARE.
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/taekwondo1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/activity_taekwondo_counter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.project2.TaekwondoCounter.MainActivity">

            <TextView
                style="@style/CustomFighterStyle"
                android:text="@string/Fighter_A" />
            <TextView
                android:id="@+id/figther_a_score"
                style="@style/CustomScoreStyle"
                android:text="@string/ScoreA" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="addThreeForFighterA"
                android:text="@string/Three_Points" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="addTwoForFighterA"
                android:text="@string/Two_Points" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="addOneForFighterA"
                android:text="@string/One_Point" />
            <Button
                style="@style/CustomButtonStyle"
                android:onClick="sustractOneForFighterA"
                android:text="@string/Foul" />

        </LinearLayout>

        <View
            style="@style/CustomViewStyle"/>

        <LinearLayout
            android:id="@+id/activity_taewkwondo_counter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.project2.TaekwondoCounter">

            <TextView
                style="@style/CustomFighterStyle"
                android:text="@string/Fighter_B" />

            <TextView
                android:id="@+id/fighter_b_score"
                style="@style/CustomScoreStyle"
                android:text="@string/ScoreB" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="addThreeForFighterB"
                android:text="@string/Three_Points" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="addTwoForFighterB"
                android:text="@string/Two_Points" />

            <Button
                style="@style/CustomButtonStyle"
                android:onClick="addOneForFighterB"
                android:text="@string/One_Point" />
            <Button
                style="@style/CustomButtonStyle"
                android:onClick="sustractOneForFighterB"
                android:text="@string/Foul" />
        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/CustomResetButtonStyle"
        android:onClick="resetScore"
        android:text="@string/Reset" />
</RelativeLayout>